@@ -26,6 +26,7 @@ public class MIFunctionFinishedEvent extends MIStoppedEvent {
 
 	String gdbResult = ""; //$NON-NLS-1$
 	String returnValue = ""; //$NON-NLS-1$
+	String returnType = ""; //$NON-NLS-1$
 
 	public MIFunctionFinishedEvent(MISession source, MIExecAsyncOutput async) {
 		super(source, async);
@@ -45,10 +46,15 @@ public class MIFunctionFinishedEvent extends MIStoppedEvent {
 		return returnValue;
 	}
 
+	public String getReturnType() {
+		return returnType;
+	}
+
 	public String toString() {
 		StringBuffer buffer = new StringBuffer();
 		buffer.append("gdb-result-var=" + gdbResult + "\n");  //$NON-NLS-1$//$NON-NLS-2$
 		buffer.append("return-value=" + returnValue + "\n");  //$NON-NLS-1$//$NON-NLS-2$
+		buffer.append("return-type=" + returnType + "\n");  //$NON-NLS-1$//$NON-NLS-2$
 		buffer.append("thread-id=").append(getThreadId()).append('\n'); //$NON-NLS-1$
 		MIFrame f = getFrame();
 		if (f != null) {
@@ -80,6 +86,8 @@ public class MIFunctionFinishedEvent extends MIStoppedEvent {
 					gdbResult = str;
 				} else if (var.equals("return-value")) { //$NON-NLS-1$
 					returnValue = str;
+				} else if (var.equals("return-type")) { //$NON-NLS-1$
+					returnType = str;
 				} else if (var.equals("thread-id")) { //$NON-NLS-1$
 					try {
 						int id = Integer.parseInt(str.trim());
